# MagicBlock-game

./: .gitignore  Anchor.toml  Cargo.toml
carde-game-vrf/: .gitignore  Anchor.toml  README.md
carde-game-vrf/app/: package-lock.json  package.json
carde-game-vrf/app/src/app/: layout.tsx  page.tsx
carde-game-vrf/app/src/app/admin/: page.tsx
carde-game-vrf/app/src/app/pool/[id]/: page.tsx
carde-game-vrf/app/src/components/: AdminManager.tsx  CreatePoolForm.tsx  EventFeed.tsx  Navbar.tsx  PoolCard.tsx  Providers.tsx  StatusBadge.tsx
carde-game-vrf/app/src/hooks/: useAdmin.ts  useEvents.ts  usePools.ts  useProgram.ts
carde-game-vrf/app/src/lib/: idl.json  sdk.ts  utils.ts
carde-game-vrf/programs/carde-game-vrf/: Cargo.toml
carde-game-vrf/programs/carde-game-vrf/src/: constants.rs  errors.rs  events.rs  lib.rs
carde-game-vrf/programs/carde-game-vrf/src/instructions/: add_admin.rs  buy_ticket.rs  cancel_pool.rs  close_pool.rs  create_pool.rs  initialize.rs  mod.rs  remove_admin.rs  resolve_ticket.rs
carde-game-vrf/programs/carde-game-vrf/src/state/: config.rs  pool.rs
carde-game-vrf/sdk/: constants.ts  fetch.ts  index.ts  pda.ts  setup.ts
carde-game-vrf/sdk/instructions/: addAdmin.ts  buyTicket.ts  createPool.ts  index.ts  initialize.ts  removeAdmin.ts
carde-game-vrf/tests/: carde-game-vrf.ts
programs-ecs/components/pool/: Cargo.toml
programs-ecs/components/pool/src/: lib.rs
programs-ecs/libs/shared/src/: lib.rs
programs-ecs/systems/buy-ticket/: Cargo.toml
programs-ecs/systems/buy-ticket/src/: lib.rs
programs-ecs/systems/create-pool/: Cargo.toml
programs-ecs/systems/create-pool/src/: lib.rs
