[package]
name = "pool"
version = "0.1.0"
description = "Carde game — pool component (with VRF callback instruction)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
ephemeral-vrf-sdk = { version = "0.2.3", features = ["anchor"] }
shared = { path = "../../libs/shared" }
